--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,7 @@
     <modules>
         <module>calculator</module>
         <module>deal</module>
+        <module>statement</module>
     </modules>
 
 </project>
