--- a/statement/src/main/resources/application.yaml
+++ b/statement/src/main/resources/application.yaml
@@ -1,3 +1,8 @@
+statement:
+  dealBaseUrl: http://localhost:8081
+  statementUrl: /statement
+  selectionUrl: /offer/select
+
 server:
   port: 8082
 
