--- a/deal/pom.xml
+++ b/deal/pom.xml
@@ -99,6 +99,10 @@
             <artifactId>spring-data-jpa</artifactId>
             <version>3.0.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
