--- a/statement/src/main/resources/application.yaml
+++ b/statement/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 statement:
-  dealBaseUrl: http://localhost:8081
+  dealBaseUrl: http://localhost:8081/deal
   statementUrl: /statement
   selectionUrl: /offer/select
 
