--- a/deal/pom.xml
+++ b/deal/pom.xml
@@ -99,6 +99,16 @@
             <artifactId>spring-data-jpa</artifactId>
             <version>3.0.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
