--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,7 @@
         <module>calculator</module>
         <module>deal</module>
         <module>statement</module>
+        <module>dossier</module>
     </modules>
 
 </project>
