--- a/dossier/src/main/resources/application.yaml
+++ b/dossier/src/main/resources/application.yaml
@@ -10,3 +10,24 @@ dossier:
 
 server:
   port: 8083
+
+spring:
+  mail:
+    host: smtp.mail.ru
+    port: 465
+    username: lygina.polina.03@mail.ru
+    password: ${password}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          ssl:
+            enable: true
+  kafka:
+    consumer:
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring:
+          json:
+            trusted:
+              packages: ru.neoflex.edu.java.dto
