--- a/deal/src/main/resources/application.yaml
+++ b/deal/src/main/resources/application.yaml
@@ -29,7 +29,7 @@ springdoc:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5433/deal
+    url: jdbc:postgresql://resources-postgresql-1:5432/deal
     username: postgres
     password: postgres
   jpa:
