--- a/.github/workflows/creditbank-ci.yml
+++ b/.github/workflows/creditbank-ci.yml
@@ -24,3 +24,18 @@ jobs:
       run: |
         docker compose -f ./deal/src/main/resources/docker-compose.yml up -d
         docker compose -f ./docker-compose.yml up -d
+
+  coverage:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          java-version: 17
+      - run: mvn -B verify -P coverage --no-transfer-progress
+
+      - uses: codecov/codecov-action@v4
+        with:
+          file: ./**/target/site/jacoco/jacoco.xml
+          name: codecov
