--- a/.github/workflows/creditbank-ci.yml
+++ b/.github/workflows/creditbank-ci.yml
@@ -33,6 +33,7 @@ jobs:
       - uses: actions/setup-java@v4
         with:
           java-version: 17
+          distribution: 'temurin'
       - run: mvn -B verify -P coverage --no-transfer-progress
 
       - uses: codecov/codecov-action@v4
